# AED1-Turing-Barber

./: .gitignore  CMakeLists.txt  README.md  turing_barber
include/: autenticacao.h  contexto.h  controle_barbeiro.h  controle_cliente.h  estruturas.h  menu.h  utils.h  validacao_data.h
src/: autenticacao.c  contexto.c  controle_barbeiro.c  controle_cliente.c  main.c  menu.c  utils.c  validacao_data.c
